--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
 
   text-align: center;
   font-size: 3rem;
+  font-weight: 700;
 }
 
 .ConnectWallet{
@@ -170,6 +171,10 @@ textarea{
 .textNavBtn:hover{
   text-decoration:line-through;
   color: black;
+}
+
+.router-link-active{
+  text-decoration:line-through;
 }
 
 
