--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,122 @@
   display: flex;
   justify-content: end;
   align-items: center;
+  gap: 0.7rem;
 }
+
+
+
+.Casino{
+  width: 50vw;
+  max-width: 1000px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+}
+
+.Casino .banner-text{
+  min-width: 250px;
+}
+
+.GamePanel{
+  height: 220px;
+  width: 220px;
+  cursor: pointer;
+}
+
+.PlusOrMinus{
+  min-width: 300px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.BetRow{
+  min-width: 450px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.game-btn {
+  border-radius: 5px;
+  padding: 15px 25px;
+  text-decoration: none;
+  color: #000000;
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.25);
+  
+
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -o-user-select:none;
+  user-select:none;
+  cursor: pointer;
+}
+
+.game-btn:active {
+  transform: translate(0px, 5px);
+  -webkit-transform: translate(0px, 5px);
+  box-shadow: 0px 0px 0px 0px;
+}
+
+.game-btn-plus {
+  
+  color: #ffffff;
+  background-color: #000000;
+  
+  height: 25px;
+  width:69px;
+  font-size: 25px;
+  font-weight: 600;
+  margin: 20px 20px 37px 20px;
+}
+
+.game-btn-minus {
+  
+  background-color: #ebeef0;
+  
+  color: #000000;
+  height: 25px;
+  width:69px;
+  font-size: 25px;
+  font-weight: 600;
+  margin: 20px 20px 37px 20px;
+}
+
+.game-btn-bet{
+  background-color: #edf3f7;
+  margin: 12px 20px;
+  font-size: 16px;
+  width:55px;
+  height: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .Donate{
   display: flex;
@@ -133,6 +248,10 @@ textarea{
 
 .bg-black {
   background-color: rgb(0, 0, 0);
+}
+
+.bg-white {
+  background-color: rgb(255,255,255);
 }
 
 .text-base {
