--- a/src/App.css
+++ b/src/App.css
@@ -74,7 +74,7 @@
 .BetRow{
   min-width: 450px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .game-btn {
@@ -92,6 +92,7 @@
   -moz-user-select:none;
   -o-user-select:none;
   user-select:none;
+  
   cursor: pointer;
 }
 
@@ -133,6 +134,13 @@
   height: 20px;
 }
 
+.game-btn-submmit{
+  background-color: #dce2c1;
+  margin: 12px 20px;
+  font-size: 18px;
+  width:169px;
+  
+}
 
 
 
@@ -173,6 +181,11 @@
   margin-bottom: 1rem; 
   color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
+
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -o-user-select:none;
+  user-select:none;
   
 }
 
