--- a/src/App.css
+++ b/src/App.css
@@ -68,11 +68,10 @@
 .PlusOrMinus{
   min-width: 300px;
   display: flex;
-  justify-content:center;
+  justify-content:space-around;
 }
 
 .BetRow{
-  min-width: 450px;
   display: flex;
   justify-content: space-around;
 }
@@ -109,11 +108,11 @@
   color: #ffffff;
   background-color: #000000;
   
-  height: 28px;
-  width:72px;
+  height: 34px;
+  width:112px;
   font-size: 30px;
   font-weight: 600;
-  margin: 20px 20px 20px 20px;
+  margin: 16px 0px;
 }
 
 
@@ -122,16 +121,16 @@
   background-color: #ebeef0;
   
   color: #000000;
-  height: 28px;
-  width:72px;
+  height: 34px;
+  width:112px;
   font-size: 30px;
   font-weight: 600;
-  margin: 20px 20px 20px 20px;
+  margin: 16px 0px;
 }
 
 .game-btn-bet{
   background-color: #edf3f7;
-  margin: 12px 20px;
+  margin: 8px 8px;
   font-size: 16px;
   width:55px;
   height: 20px;
@@ -151,9 +150,9 @@
 
 .game-btn-submmit{
   background-color: #dce2c1;
-  margin: 25px;
+  margin: 16px 0px;
   font-size: 18px;
-  width:169px;
+  width:297px;
 }
 
 .Reveal{
