--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,18 @@
   min-width: 250px;
 }
 
+.Tax{
+  color: #000000;
+  font-size: 15px;
+}
+
 .GamePanel{
   height: 200px;
   width: 200px;
   cursor: pointer;
 }
+
+
 
 .PlusOrMinus{
   min-width: 300px;
@@ -86,8 +93,8 @@
 .CommitRow{
   display: flex;
   flex-direction: column;
+  justify-content:center;
   align-items: center;
-  justify-content: center;
 }
 
 .game-btn {
@@ -200,6 +207,11 @@
   margin: 16px 0px;
   font-size: 20px;
   width:180px;
+}
+
+.TxProgress{
+  text-align: center;
+  margin-top: 5px;
 }
 
 
