--- a/src/App.css
+++ b/src/App.css
@@ -387,11 +387,25 @@ textarea{
 
 .Post{
   border: #000000;
+  background-color: white;
   border-style: solid;
   border-width: 1.5px;
   padding: 8px;
-  margin-top: 1rem;
+  margin-top: 2.5rem;
   width: 600px;
+}
+
+.PostShadow{
+  position: absolute;
+  bottom: -7px;
+  right: -7px;
+  
+  width: 600px;
+  z-index: -1;
+
+  background-color:rgba(99, 102, 241, 0.75);
+  color: rgba(99, 102, 241, 0.75);
+  padding: 8px;
 }
 
 .Blog .banner-text{
